--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>MVC Web application</title>
+    <title>UniPro : login</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
-<h1>Authentication</h1>
+<h1>Login</h1>
 
 
-<form action="login">
-   Email : <input type="email" id="email"><br>
-   Password :  <input type="password" id="password"><br>
+<form action="/login" method="post">
+   Email : <input type="email" name="email"><br>
+   Password :  <input type="password" name="password"><br>
     <input type="submit" />
 </form>
 
