--- a/src/main/resources/templates/researcher.html
+++ b/src/main/resources/templates/researcher.html
@@ -6,20 +6,28 @@
 <body>
 <h1>Welcome, <span th:text="${researcher.firstName}+ ' ' + ${researcher.lastName}" ></span></h1>
 
-<h2>Your Projects as PI</h2>
-<ul>
-    <li th:each="project : ${researcher.projectsAsPI}">
+<h2 >Your Projects as PI</h2>
+<ul id="projectsAsPIList">
+    <li th:each="project : ${researcher.projectsAsPI}" id="projectAsPI-${project.id}">
         <span th:text="${project.name}"></span>
         <a href="project?id=10" th:href="@{project(id=${project.id})}">Manage Project</a>
     </li>
 </ul>
 
 <h2>Projects You're Working On</h2>
-<ul>
-    <li th:each="project : ${researcher.projects}">
+<ul id="projectsList">
+    <li th:each="project : ${researcher.projects}" id="projectsList-${project.id}">
         <span th:text="${project.name}"></span>
         <a th:href="@{'/addhours?rid=' + ${researcher.id} + '&pid=' + ${project.id}}">Add hours</a></ul>
-<a href="report?id=10" th:href="@{report(id=${researcher.id})}">Generate report</a>
+
+Generate report for
+<form action="/generate" >
+    <input type="hidden" name="id" value="10" th:value="${researcher.id}"> <br>
+    month : <input type="number" min="1" max="12" name="month">
+    year :  <input type="number" min="2020" max="2025" name="year"><br>
+    <input type="submit" value="generate"/>
+</form>
+<a href="/" >Log out</a>
 
 </body>
 </html>
