--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-<h1>Login</h1>
+<h1>UniPro : Login</h1>
 
 
 <form action="/login" method="post">
    Email : <input type="email" name="email"><br>
    Password :  <input type="password" name="password"><br>
-    <input type="submit" />
+    <input type="submit" value="login"/>
 </form>
 
 </body>
