add days of on researcher report + refactor

--- a/src/main/resources/templates/_error.html
+++ b/src/main/resources/templates/_error.html
@@ -5,9 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
-<p> GENERIC ERROR </p>
-
-<a href="list"> Show the list </a></td>
+<p th:text="${error}"></p>
 
 </body>
 </html>
