--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -4,30 +4,35 @@
     <title>UniPro : Your Report</title>
 </head>
 <body>
-<h1>Project Hours For Month : <span  th:text="${month}+ '/' + ${year}"></span></h1>
-
+<h1><span  th:text="${month}+ '/' + ${year}"></span> </h1>
+<h2>Researcher</h2>
+Name : <span th:text="${researcher.firstName}"></span><br>
+Last Name : <span th:text="${researcher.lastName}"></span><br>
+Email : <span th:text="${researcher.email}"></span><br>
+Fiscal Code : <span th:text="${researcher.fiscalCode}"></span><br>
+<h2>Hours</h2>
 <table border="1">
     <thead>
     <tr>
         <th>Project</th>
-        <th th:each="day : ${daysInMonth}" th:text="${day}">Day</th>
-        <th> Totale </th>
+        <th th:each="day : ${days}" th:text="${day}">Day</th>
+        <th> Total </th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="entry : ${projectHoursMap}">
-        <td th:text="${entry.key.name}">Project Name</td>
-        <td th:each="val : ${entry.value}" th:text="${val}">Hours</td>
+    <tr th:each="projectMap : ${projectHoursMap}">
+        <td th:text="${projectMap.key.name}">Project Name</td>
+        <td th:each="val : ${projectMap.value}" th:text="${val}==-1?'X':${val}">Hours</td>
     </tr>
     <tr>
         <td>Total</td>
-        <td th:each="day : ${daysInMonth}"
-            th:text="${totalePerDay[day-1]}">0</td>
-        <td th:text="${totalHours}"></td>
+        <td th:each="val : ${totalePerDay}" th:text="${val}==-1?'X':${val}">Hours</td>
     </tr>
 
     </tbody>
 </table>
+X : day off <br>
+
 <a href="researcher?id=10" th:href="@{researcher(id=${researcher.id})}">Back</a>
 </body>
 </html>
