--- a/src/main/resources/templates/researcher.html
+++ b/src/main/resources/templates/researcher.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>UniPro : Your page</title>
+    <title>UniPro : Your Page</title>
 </head>
 <body>
 <h1>Welcome, <span th:text="${researcher.firstName}+ ' ' + ${researcher.lastName}" ></span></h1>
 
-<h2 >Your Projects as PI</h2>
+<p>Email : <span th:text="${researcher.email}"></span></p>
+<p>Fiscal code : <span th:text="${researcher.fiscalCode}"></span></p> <br>
+
+<h2 >Your Projects as PI : </h2>
 <ul id="projectsAsPIList">
     <li th:each="project : ${researcher.projectsAsPI}" id="projectAsPI-${project.id}">
         <span th:text="${project.name}"></span>
@@ -14,27 +17,27 @@
     </li>
 </ul>
 
-<h2>Projects You're Working On</h2>
+<h2>Projects You're Working On : </h2>
 <ul id="projectsList">
     <li th:each="project : ${researcher.projects}" id="projectsList-${project.id}">
         <span th:text="${project.name}"></span>
-        <a th:href="@{'/addhours?rid=' + ${researcher.id} + '&pid=' + ${project.id}}">Add hours</a></ul>
+        <a th:href="@{'/add-hours?rid=' + ${researcher.id} + '&pid=' + ${project.id}}">Add hours</a></ul>
 
-Generate your report for :
-<form action="/generate" >
+<form action="/generate-report" >
     <input type="hidden" name="id" value="10" th:value="${researcher.id}"> <br>
-    month : <input type="number" min="1" max="12" name="month">
-    year :  <input type="number" min="2020" max="2025" name="year"><br>
+    Generate your report for month : <input type="number" min="1" max="12" name="month">
+    year :  <input type="number" min="2020" max="2025" name="year">
     <input type="submit" value="Generate Report"/>
 </form>
 <br>
-Ask a day off :
+
 <form action="/request-day-off" >
     <input type="hidden" name="id" value="10" th:value="${researcher.id}"> <br>
-    Day:<input type="date" name="day"><br>
+    Ask a day off : Day : <input type="date" name="day">
     <input type="submit" value="Submit Request"/>
 </form>
 <br>
+
 <a href="/" >Log out</a>
 
 </body>
