Unit Test ok : coverage = 99

--- a/src/main/resources/templates/_error.html
+++ b/src/main/resources/templates/_error.html
@@ -4,7 +4,7 @@
     <title>UniPro : Error</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-
+<h1>UniPro : Error</h1>
 <p th:text="${error}"></p>
 
 </body>
